[package]
name = "solana_tx_decoding"
edition = "2024"

[dependencies]
solana_central = { path = "../solana_central" }
borsh = "1.5.7"
tokio = "1.47.1"
solana-rpc-client-api = "3.0.5"
dotenv = "0.15.0"
bs58 = "0.5.1"
bumpalo = "3.19.0"
solana-sdk = "2.2.7"
solana-transaction-status-client-types = "2.2.7"
solana-client = "2.2.7"
solana-storage-proto = "2.2.2"
yellowstone-grpc-proto = "9.0.1"
