[package]
name = "solana_tx_decoding"
edition = "2024"

[dependencies]
solana_central = { path = "../solana_central" }
dotenv = "0.15.0"
bs58 = "0.5.1"
bumpalo = "3.19.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde_json = "1.0"
yellowstone-grpc-proto = "10.1.1"
solana-transaction-status-client-types = "3.0.10"
solana-sdk = "3.0.0"
tokio = "1.48.0"
solana-client = "3.1.2"
solana-storage-proto = "3.1.2"
solana-rpc-client-api = "3.1.2"
borsh = "1.6.0"
